<resources>
    <string name="app_name">Yes, Mr. White!</string>
    <string name="jogo1">Quiz Química</string>
    <string name="jogo2">Canhão Química</string>
    <string name="choices_information">Escolha quais das opções vai jogar.</string>
    <string name="option_choices_information">Preferências</string>
    <string name="option_choices_padrao">Nome</string>
    <string name="action_settings">Configuração</string>
    <string name="settings_activity">Quiz Química Configuração</string>
    <string name="number_of_choices">Opção de escolha</string>
    <string name="number_of_choices_description">Mostra para escolhe entre: Nome, Número Atomico, Massa Atomico e Numero de periodos</string>
    <string name="world_regions">Tabelas</string>
    <string name="world_regions_description">Regions to include in the quiz</string>
    <string name="guess_country">Escolha a opção</string>
    <string name="results">%1$d número de escolhas, %2$.02f%% pocentagem correta</string>
    <string name="incorrect_answer">Errado!</string>
    <string name="correct_answer">Certo!</string>
    <string name="default_region_message">Dados padrões.</string>
    <string name="restarting_quiz">Reinciando Quiz Química com suas configurações</string>
    <string name="ok">OK</string>
    <string name="question">Questão %1$d of %2$d</string>
    <string name="reset_quiz">Reniciando Quiz Química</string>
    <string name="image_description">Imagem ok</string>
    <string name="default_region">Tabela_Completa</string>

</resources>
